@@ -44,7 +44,7 @@ default:
     
     timeout:                1800
     
-    suffix:                 .html
+    suffix:                 /
 
     module_default:         on
 
